refactor: add balance to get id
